# OpenGLLessons

./: Application.cpp  Application.h  CMakeLists.txt  Mesh.cpp  Mesh.h  OpenGL.sln  Raytracing.csproj  glad.c  main.cpp
Raytracing/: CSTexture.cs  Camera.cs  ComputeShader.cs  Program.cs  Raytracing.cs  Raytracing.csproj  SSBO.cs  Texture.cs  cs.glsl  cs.glsl.bak
Task1/: Circle.cs  Form1.Designer.cs  Form1.cs  Line.cs  Mnogougol.cs  Polygon.cs  PravMnogougol.cs  RegularPolygon.cs  Task1.csproj
Task1/Properties/: AssemblyInfo.cs
Task3/: Cylinder.cs  Cylindre.cs  Form1.Designer.cs  Form1.cs  LinesSphere.cs  Mnogougol.cs  Octaeder.cs  Polygon.cs  Pyramid.cs  Rectangle.cs  Spiral.cs  Task3.csproj  Torus.cs  Trapezoid.cs  TriangleSphere.cs
Task3/Properties/: AssemblyInfo.cs  Resources.Designer.cs
Task4/: FractalRenderer.cs  Program.cs  Task4.csproj
Task4/Properties/: AssemblyInfo.cs
Task5/: Form1.Designer.cs  Form1.cs  Program.cs  Task5.csproj
Task6/: Model.cs  Program.cs  Renderer.cs  Task6.csproj
Task6/Properties/: AssemblyInfo.cs
Task7/: Camera.cs  Form1.Designer.cs  Form1.cs  Mesh.cs  ModelLoader.cs  ObjLoader.cs  Program.cs  Shader.cs  Task7.csproj  Texture.cs
Task7/Models/: cube.obj.bak
Task7/Properties/: AssemblyInfo.cs
Task8/: CSTexture.cs  Camera.cs  Canvas.cs  ComputeShader.cs  Form1.Designer.cs  Form1.cs  IShape.cs  Light.cs  Material.cs  MathHelper.cs  Plane.cs  Program.cs  Ray.cs  RayHit.cs  Raytracing.cs  SSBO.cs  Scene.cs  Sphere.cs  Task8.csproj  cs.glsl
wingrafika/: Form1.Designer.cs  Form1.cs  Program.cs  grafica.csproj
(+8 files in other folders)
